# base32-lib

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  run-tests.sh
.github/workflows/: tests.yml
base32_lib/: __init__.py  base32.py
docs/: conf.py  index.rst
tests/: test_base32.py
