# -*- coding: utf-8 -*-
#
# This file is part of base32-lib
# Copyright (C) 2019 CERN.
# Copyright (C) 2019 Northwestern University.
# Copyright (C) 2025 Front Matter.

# base32-lib is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base32-lib"
dynamic = ["version"]
description = "Small library to generate, encode and decode random base32 strings."
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "Invenio Software", email = "info@inveniosoftware.org" }]
keywords = ["base32", "identifiers"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/inveniosoftware/base32-lib"

[project.optional-dependencies]
docs = ["Sphinx>=1.4.2"]
tests = [
  "check-manifest>=0.49",
  "pytest>=6.0,<9.0",
  "pytest-cov>=3.0.0",
  "pytest-black-ng>0.4.0",
  "pytest-isort>=3.0.0",
  "pytest-pycodestyle>=2.2.0",
  "pytest-pydocstyle>=2.2.3",
]
all = ["base32-lib[docs,tests]"]

[dependency-groups]
test = ["pytest>=7.0", "pytest-cov>=4.0", "coverage>=7.0"]

[tool.setuptools]
packages = ["base32_lib"]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "base32_lib.__version__" }

[tool.setuptools.package-data]
"*" = ["*.py", "*.css", "*.css_t", "*.conf", "*.html"]

# Tool configurations migrated from setup.cfg

[tool.bdist_wheel]
universal = true

[tool.pydocstyle]
add-ignore = ["D401"]

[tool.isort]
known_first_party = ["base32_lib"]
multi_line_output = 2
default_section = "THIRDPARTY"
skip = [".eggs"]

[tool.pytest.ini_options]
addopts = [
  "--black",
  "--isort",
  "--pydocstyle",
  "--cov=base32_lib",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--strict-markers",
  "--strict-config",
]
testpaths = ["docs", "tests", "base32_lib"]
minversion = "7.0"
