# SPDX-FileCopyrightText: 2019 CERN.
# SPDX-FileCopyrightText: 2019 Northwestern University.
# SPDX-FileCopyrightText: 2025 Front Matter.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "base32-lib"
dynamic = ["version"]
description = "Small library to generate, encode and decode random base32 strings."
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [{ name = "Invenio Software", email = "info@inveniosoftware.org" }]
keywords = ["base32", "identifiers"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/inveniosoftware/base32-lib"

[project.optional-dependencies]
all = ["base32-lib[docs,tests]"]
docs = ["Sphinx>=1.4.2"]
tests = [
  "pytest-black>=0.6.0",
  "pytest-cov>=3.0.0",
  "pytest-isort>=3.0.0",
  "pytest-pycodestyle>=2.2.0",
  "pytest-pydocstyle>=2.2.3",
  "pytest>=6.0,<9.0",
]

[dependency-groups]
test = [
  "coverage>=7.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "base32_lib/__init__.py"

[tool.isort]
known_first_party = ["base32_lib"]
multi_line_output = 2
default_section = "THIRDPARTY"
skip = [".eggs"]

[tool.pydocstyle]
add-ignore = ["D401"]

[tool.pytest.ini_options]
addopts = [
  "--black",
  "--isort",
  "--pydocstyle",
  "--cov=base32_lib",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--strict-markers",
  "--strict-config",
]
minversion = "7.0"
testpaths = ["docs", "tests", "base32_lib"]
